adding books to main page done

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <!--listing books-->
     <div id="bookList" class="flex-container">
-        <div class="book" id="bookCard">
+        <!--<div class="book" id="bookCard">
             <h2 id="bbokTitle">Book Title</h2>
             <h3 id="bookAuthor">Author</h3>
             <p id="bookPages">pages</p>
             <p id="isRead">Reading Status</p>
             <button id="delete">Delete Book</button>
-        </div>
-    </div>
+        </div> -->
+    </div> 
 
     <!--Creeating new book records-->
 
