Creating new book card and adding book info to cards done

--- a/index.html
+++ b/index.html
@@ -14,19 +14,10 @@
 
     <!--listing books-->
     <div id="bookList" class="flex-container">
-        <!--<div class="book" id="bookCard">
-            <h2 id="bbokTitle">Book Title</h2>
-            <h3 id="bookAuthor">Author</h3>
-            <p id="bookPages">pages</p>
-            <p id="isRead">Reading Status</p>
-            <button id="delete">Delete Book</button>
-        </div> -->
+
     </div> 
 
-    <!--Creeating new book records-->
-
-    
-
+    <!--Form for Creeating new book records-->
         <dialog id="dialog">
             <form>
                 <label for="title">Title:</label><br>
@@ -37,8 +28,8 @@
                 <input type="text" id="pages" name="author"><br>
                 <label for="pages">Status::</label><br>
                     <select name="isread" id="isread">
-                        <option value="readit">Read it</option>
-                        <option value="notyet">Not yet</option>
+                        <option value="readit">Read </option>
+                        <option value="notyet">Not Read</option>
                     </select><br><br>
                 <button type="submit" id="submit"> Submit</button>
                 <input type="submit" id="js-close" value="Cancel" />
